seperate  fastAPI & Celery

--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -9,9 +9,8 @@
     <h3>Tasks</h3>
     <p>Pick a task length.</p>
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary" onclick="handleClick(1)">Short</a>
-      <button type="button" class="btn btn-primary" onclick="handleClick(2)">Medium</a>
-      <button type="button" class="btn btn-primary" onclick="handleClick(3)">Long</a>
+      <button type="button" class="btn btn-primary" onclick="handleClick(1)">1</a>
+        <button type="button" class="btn btn-primary" onclick="handleClick(2)">2</a>
     </div>
   </div>
   <br><br>
